Added fruit class

--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="Ghost.cpp" />
     <ClCompile Include="InputComponent.cpp" />
     <ClCompile Include="main.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Fruit.h" />
     <ClInclude Include="Ghost.h" />
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="MainScene.h" />
